retirando código de backup e redirecionando para página inicial

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,5 +2,7 @@
 <mat-toolbar color="primary">
   <h1>{{ title }}</h1>
 </mat-toolbar>
-<router-outlet></router-outlet>
+<router-outlet>
+  <!-- <button mat-raised-button color="basic" routerLink="/list">List Pokemons</button> -->
+</router-outlet>
 
